--- a/ex-gen-app/package.json
+++ b/ex-gen-app/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-session": "^1.18.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^3.11.3"
   }
 }
