--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,13 @@ services:
       MYSQL_USER: exgen_user
       MYSQL_PASSWORD: exgen_pass
       TZ: Asia/Tokyo
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
       - ./mysql/init:/docker-entrypoint-initdb.d:ro
+      - ./mysql/conf:/etc/mysql/conf.d:ro
 
 volumes:
   db_data:
