feat: Add new omikuji (fortune-telling) application and integrate it into Docker Compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 
 services:
-  ex-gen-app:
+  todoApp:
     build:
-      context: ./ex-gen-app
+      context: ./todoApp
       dockerfile: Dockerfile
     depends_on:
       - db
