feat: Containerize application by adding Dockerfile and updating docker-compose.yml.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@
 
 services:
   # おみくじアプリのサービス定義
-  omikuziapp:
+  myapp:
     # ビルド設定
     build:
-      context: ./omikuziApp # Dockerfileがあるディレクトリ
+      context: ./myapp # Dockerfileがあるディレクトリ
       dockerfile: Dockerfile
     depends_on:
       - db
